RESOLVED FIXED201099
[LFC][BFC] Non-inline formatting context(table, grid etc) root container should not collapse through.
https://bugs.webkit.org/show_bug.cgi?id=201099
Summary [LFC][BFC] Non-inline formatting context(table, grid etc) root container shou...
alan
Reported 2019-08-23 16:13:02 PDT
ssia
Attachments
Patch (1.94 KB, patch)
2019-08-23 16:31 PDT, alan
koivisto: review+
commit-queue: commit-queue-
Radar WebKit Bug Importer
Comment 1 2019-08-23 16:13:25 PDT
alan
Comment 2 2019-08-23 16:31:57 PDT
WebKit Commit Bot
Comment 3 2019-08-24 06:17:09 PDT
Comment on attachment 377178 [details] Patch Rejecting attachment 377178 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 377178, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as commit-queue@webkit.org... Fetching: https://bugs.webkit.org/attachment.cgi?id=377178&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=201099&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 377178 from bug 201099. Fetching: https://bugs.webkit.org/attachment.cgi?id=377178 Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... M Source/WebCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebCore/ChangeLog' is out of date W: 3ac4b14d8d51534537d1c2069627d1d8c4a7037b and refs/remotes/origin/master differ, using rebase: :040000 040000 60b6e441c7c8306dfe4b24638d3b818449e4a64f 5f59bb759e395b1aad61119c00abf753507eb1d2 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... M Source/WebCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebCore/ChangeLog' is out of date W: 3ac4b14d8d51534537d1c2069627d1d8c4a7037b and refs/remotes/origin/master differ, using rebase: :040000 040000 60b6e441c7c8306dfe4b24638d3b818449e4a64f 5f59bb759e395b1aad61119c00abf753507eb1d2 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource M Source/WebCore/layout/layouttree/LayoutBox.cpp M Source/WebCore/layout/layouttree/LayoutBox.h M Source/WebCore/layout/layouttree/LayoutTreeBuilder.cpp M Source/WebCore/ChangeLog r249081 = 884ffb62e369cb918008ef4ae7f8c3ddd78749f2 (refs/remotes/origin/master) First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output: https://webkit-queues.webkit.org/results/12964726
alan
Comment 4 2019-08-24 06:24:34 PDT
Note You need to log in before you can comment on or make changes to this bug.