[LFC][BFC] Non-inline formatting context(table, grid etc) root container should not collapse through. https://bugs.webkit.org/show_bug.cgi?id=201099 <rdar://problem/54658946>

Reviewed by Antti Koivisto.

I didn't manage to find it in the spec, but surely formatting contexts like table, grid and flex should behave like
block so that their vertical margins are not adjoining, when they have at least one inflow child.

* layout/blockformatting/BlockMarginCollapse.cpp:
(WebCore::Layout::BlockFormattingContext::MarginCollapse::marginsCollapseThrough):

Canonical link: https://commits.webkit.org/214806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249083 268f45cc-cd09-0410-ab3c-d52691b4dbfc